--- a/lab_13.ipynb
+++ b/lab_13.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e0c20c44",
    "metadata": {},
    "outputs": [
@@ -53,12 +53,14 @@
       "Original data for KNN Imputer:\n",
       " [[ 1.  5.]\n",
       " [ 2. nan]\n",
-      " [nan  6.]]\n",
+      " [nan  6.]\n",
+      " [ 3. 10.]]\n",
       "\n",
-      "Imputed data (KNN Imputer with n_neighbors=1):\n",
-      " [[1. 5.]\n",
-      " [2. 5.]\n",
-      " [1. 6.]]\n",
+      "Imputed data (KNN Imputer with n_neighbors=2s):\n",
+      " [[ 1.   5. ]\n",
+      " [ 2.   7.5]\n",
+      " [ 2.   6. ]\n",
+      " [ 3.  10. ]]\n",
       "\n",
       "Imputed values are the result of considering the single nearest neighbor for each missing value.\n"
      ]
@@ -69,16 +71,16 @@
     "from sklearn.impute import KNNImputer\n",
     "\n",
     "# Data with missing values\n",
-    "data_knn_impute = np.array([[1.0, 5.0], [2.0, np.nan], [np.nan, 6.0]])\n",
+    "data_knn_impute = np.array([[1.0, 5.0], [2.0, np.nan], [np.nan, 6.0], [3, 10]])\n",
     "print(\"Original data for KNN Imputer:\\n\", data_knn_impute)\n",
     "\n",
-    "# Initialize KNNImputer with n_neighbors=1\n",
-    "imputer_knn = KNNImputer(n_neighbors=1)\n",
+    "# Initialize KNNImputer with n_neighbors=2\n",
+    "imputer_knn = KNNImputer(n_neighbors=2)\n",
     "\n",
     "# Fit and transform the data\n",
     "imputed_data_knn = imputer_knn.fit_transform(data_knn_impute)\n",
     "\n",
-    "print(f\"\\nImputed data (KNN Imputer with n_neighbors=1):\\n\", imputed_data_knn)\n",
+    "print(f\"\\nImputed data (KNN Imputer with n_neighbors=2s):\\n\", imputed_data_knn)\n",
     "print(\"\\nImputed values are the result of considering the single nearest neighbor for each missing value.\")"
    ]
   },
